--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Gab's Dev</title>
-    <link rel="icon" type="image/png" href="/style/imgs/favicon.png">
+    <link rel="icon" type="image/png" href="./imgs/favicon.png">
 
     
 </head>
@@ -24,19 +24,19 @@
                   </div>
                  <div class="abas-link">
                         <a href="https://instagram.com/http_gabdev" target="_blank">
-                            <img src="../style/imgs/icon-instagram.png" alt="icon-instagram" />
+                            <img src="./imgs/icon-instagram.png" alt="icon-instagram" />
                         </a>
 
                         <a href="https://github.com/GabriellyNogueira" target="_blank">
-                            <img src="../style/imgs/icon-github-.png" alt="icon-github" />
+                            <img src="./imgs/icon-github-.png" alt="icon-github" />
                         </a>
 
                         <a href="https://www.linkedin.com/in/gabrielly-nogueira-aa37532b4" target="_blank">
-                            <img src="../style/imgs/icon-linkedin.png" alt="icon-linkedin" />
+                            <img src="./imgs/icon-linkedin.png" alt="icon-linkedin" />
                         </a>
 
                         <a href="https://wa.me/5511953581849?text=Olá,%20vim%20pelo%20seu%20portfólio" target="_blank">
-                            <img src="../style/imgs/icon-whats.png" alt="icon-whats" />
+                            <img src="./imgs/icon-whats.png" alt="icon-whats" />
                         </a>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         </div>
                          <div class="col-md-4 mt-5">
                             <div class="foto-principal">
-                            <img  src="../style/imgs/foto-redonda.png" alt="minha foto" class="img-fluid"/>
+                            <img  src="./imgs/foto-redonda.png" alt="minha foto" class="img-fluid"/>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                             </div>
                             <div class=" col-md-6 justify-content-center align-items-center">
                                 <div class="img2-container ">
-                                    <img src="../style/imgs/fotoperfil_jpg.jpg" alt="minhafoto" class="img-fluid" style="width: 60%">
+                                    <img src="./imgs/fotoperfil_jpg.jpg" alt="minhafoto" class="img-fluid" style="width: 60%">
                                 </div>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                                         
                                             <div class="col-sm-12 col-md-4 p-2">
                                                 <div class="card  " style="background: #BC9DE3;" >
-                                                <img src="../style/imgs/projeto1.png" class="card-img-top" alt="...">
+                                                <img src="./imgs/projeto1.png" class="card-img-top" alt="...">
                                                 <div class="card-body">
                                                     <h5 class="card-title" style="font-family: 'Platypi', serif;" style="color: #550fad;">E-commerce de Moda</h5>
                                                     <p class="card-text">Loja online desenvolvida com foco em experiência do usuário, contando com catálogo de produtos, promoções destacadas, área de contato e navegação fluida, moderna e responsiva.</p>
@@ -172,7 +172,7 @@
                                                 </div>
                                             <div class="col-sm-12 col-md-4 p-2">
                                                 <div class="card" style="background: #BC9DE3;" >
-                                                    <img src="../style/imgs/projeto2.png" class="card-img-top" alt="...">
+                                                    <img src="./imgs/projeto2.png" class="card-img-top" alt="...">
                                                     <div class="card-body">
                                                         <h5 class="card-title" style="font-family: 'Platypi', serif;"style="color: #550fad;">Website Profissional para Negócios de Beleza</h5>
                                                         <p class="card-text">Site institucional focado em presença digital. Apresenta serviços, informações de contato e navegação simples com design moderno e responsivo. </p>
@@ -182,7 +182,7 @@
                                             </div>
                                             <div class="col-sm-12 col-md-4 p-2">
                                                 <div class="card" style="background: #BC9DE3;" >
-                                                    <img src="../style/imgs/projeto3.png" class="card-img-top" alt="...">
+                                                    <img src="./imgs/projeto3.png" class="card-img-top" alt="...">
                                                     <div class="card-body">
                                                         <h5 class="card-title" style="font-family: 'Platypi', serif;" style="color: #550fad;">Clínica da Mulher</h5>
                                                         <p class="card-text">Site institucional desenvolvido para apresentação institucional clara. Conta com informações essenciais, contato facilitado, navegação simples e um design leve, acolhedor e responsivo.</p>
@@ -251,18 +251,18 @@
 
                                 <div class="col-md-6 text-center text-md-end">
                                     <a href="https://instagram.com/http_gabdev" target="_blank">
-                            <img src="../style/imgs/icon-instagram.png" alt="icon-instagram" />
+                            <img src="./imgs/icon-instagram.png" alt="icon-instagram" />
                         </a>
                                       <a href="https://github.com/GabriellyNogueira" target="_blank">
-                            <img src="../style/imgs/icon-github-.png" alt="icon-github" />
+                            <img src="./imgs/icon-github-.png" alt="icon-github" />
                         </a>
 
                         <a href="https://www.linkedin.com/in/gabrielly-nogueira-aa37532b4" target="_blank">
-                            <img src="../style/imgs/icon-linkedin.png" alt="icon-linkedin" />
+                            <img src="./imgs/icon-linkedin.png" alt="icon-linkedin" />
                         </a>
 
                         <a href="https://wa.me/5511953581849?text=Olá,%20vim%20pelo%20seu%20portfólio" target="_blank">
-                            <img src="../style/imgs/icon-whats.png" alt="icon-whats" />
+                            <img src="./imgs/icon-whats.png" alt="icon-whats" />
                         </a>
                                 </div>
                                 </div>
@@ -272,25 +272,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
-        const alertPlaceholder = document.getElementById('liveAlertPlaceholder')
-const appendAlert = (message, type) => {
-  const wrapper = document.createElement('div')
-  wrapper.innerHTML = [
-    `<div class="alert alert-${type} alert-dismissible" role="alert">`,
-    `   <div>${message}</div>`,
-    '   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>',
-    '</div>'
-  ].join('')
-
-  alertPlaceholder.append(wrapper)
-}
-
-const alertTrigger = document.getElementById('liveAlertBtn')
-if (alertTrigger) {
-  alertTrigger.addEventListener('click', () => {
-    appendAlert('Nice, you triggered this alert message!', 'success')
-  })
-}
     </script>
 
 </body>
