--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 </nav>
                 <header>
-                <div class="container container-home">
+                <div class="container ">
                     <div class="row">
                         <div class=" col-md-8 mt-5">
                             <div class="titulos">
@@ -81,7 +81,7 @@
                             </div>
                             <div class=" col-md-6 justify-content-center align-items-center">
                                 <div class="img2-container ">
-                                    <img src="./imgs/fotoperfil_jpg.jpg" alt="minhafoto" class="img-fluid" style="width: 60%">
+                                    <img src="./imgs/fotoperfil_jpg.jpg" alt="minhafoto" class="img-fluid d-flex justify-content-center align-items-center" style="width: 60%">
                                 </div>
                             </div>
                         </div>
@@ -207,46 +207,46 @@
                                             <span class="roxo" >  Me mande uma mensagem e vamos criar algo incrível juntos!</span></p>
                                             </div>
                                         </div>
-                                        <div class="formulario col-md-6 mt-5">
-                                        <form action="https://formsubmit.co/gabriellynogueira785@gmail.com" method="POST">
-                                            <div className="mb-3">
-                                                <div class="formulario">
-                                              <label for="name">Nome</label>
-                                              <input type="text" name="name" id="name" required />
-                                               </div>
-                                            </div>
-                                            <div class="formulario ">
-                                            <div className="mb-3">
-                                                  <label for="email">E-mail</label>
-                                                  <input type="email" name="email" id="email" required />
-                                                  </div>
-                                            </div>
-                                            <div className="mb-3">
-                                                <div class="formulario">
-                                           <label for="message">Mensagem</label>
-                                           <textarea name="message" id="message" placeholder="Digite sua mensagem"  required></textarea>
-                                            <input type="hidden" name="_captcha" value="false">
-                                            <input type="hidden" name="_next" value="http://127.0.0.1:5502/obrigada.html">
-                                                </div>
-                                            
-                                            
-                                            </div>
-                                            <div class=' d-flex justify-content-center'>
-                                            <button type="submit" class="enviar btn btn-primary px-5"  id="liveAlertBtn"> Enviar </button>
-                                            <div id="liveAlertPlaceholder"></div>
-                                            </div>
-                                        </form>
-                                        </div>
-                                    </div>
-                                </div>
+                                       <div class="col-12 col-md-6 mt-5">
+
+  <form id="formWhats" class="card shadow p-4 rounded-4">
+
+    <h4 class="mb-4 text-center">Fale comigo</h4>
+
+    <!-- Nome -->
+    <div class="mb-3">
+      <label class="form-label">Nome</label>
+      <input type="text" class="form-control" id="nome" required>
+    </div>
+
+    <!-- Email -->
+    <div class="mb-3">
+      <label class="form-label">E-mail</label>
+      <input type="email" class="form-control" id="email" required>
+    </div>
+
+    <!-- Mensagem -->
+    <div class="mb-3">
+      <label class="form-label">Mensagem</label>
+      <textarea class="form-control" rows="4" id="mensagem" required></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-success w-100">
+      Enviar pelo WhatsApp
+    </button>
+
+  </form>
+
+</div>
+
 
                             </section>
                          <footer class="bg-dark text-light py-4 mt-5">
                             <div class="container">
                                 <div class="row align-items-center">
                                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                                    <p class="reserva mb-1">Design com ❤️ por Gab's Dev</p>
                                     <small>© Copyright 2025 - Todos os direitos reservados.</small>
+                                    <p class="reserva mb-1">Design com ❤️ por Gabrielly Caroline</p>
                                 </div>
 
                                 <div class="col-md-6 text-center text-md-end">
@@ -271,8 +271,34 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
-    </script>
+   <!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Seu script -->
+<script>
+document.getElementById("formWhats").addEventListener("submit", function(e){
+  e.preventDefault();
+
+  const nome = document.getElementById("nome").value.trim();
+  const email = document.getElementById("email").value.trim();
+  const msg = document.getElementById("mensagem").value.trim();
+
+  const telefone = "5511937396344";
+
+  const texto = `Olá, vim pelo seu portfólio
+Nome: ${nome}
+Email: ${email}
+Mensagem: ${msg}
+
+
+Aguardo retorno!
+`;
+
+  const url = "https://wa.me/" + telefone + "?text=" + encodeURIComponent(texto);
+
+  window.open(url, "_blank");
+});
+</script>
 
 </body>
 </html>
