--- a/index.html
+++ b/index.html
@@ -71,19 +71,23 @@
                         <div class="row">
                             <div class="sobre col-md-6 mt-5">
                                     <h2>Sobre Mim</h2>
-                        <p>Olá! Sou a <span class='roxo'>Gabrielly</span>, desenvolvedora <span class='roxo'>Full Stack</span>, apaixonada por tecnologia, <br /> inovação e por transformar ideias em <span class='roxo'>soluções digitais criativas</span>. <br /> 
+                        <p class="lh-lg">Olá! Sou a <span class='roxo'>Gabrielly</span>, desenvolvedora <span class='roxo'>Full Stack</span>, apaixonada por tecnologia, <br /> inovação e por transformar ideias em <span class='roxo'>soluções digitais criativas</span>. <br /> 
                         Atuo no front-end com HTML, CSS, JavaScript e frameworks modernos, criando <br /><span class='roxo'>interfaces intuitivas, responsivas e visualmente atraentes</span>. <br />
                         No back-end, trabalho com APIs, servidores e bancos de dados, <br /> desenvolvendo soluções completas,  seguras e de <span class='roxo'>alta performance</span>. <br /> 
                         Desenvolvo sites e sistemas personalizados que unem design, <br /> funcionalidade e desempenho, sempre com foco em entregar <br /> experiências digitais que transmitam <span class='roxo'>credibilidade e resultados reais</span>. <br /> 
                         Acredito que um bom projeto vai muito além do código, ele deve comunicar, <br /> envolver e fortalecer a presença online de quem o utiliza. <br />
-                        Por isso, cada linha de código que escrevo é pensada para <span class='roxo'>entregar valor e <br />gerar impacto</span>.</p>
-                               
+                        Por isso, cada linha de código que escrevo é pensada para <span class='roxo'>entregar valor e <br />gerar impacto</span>.</p> 
                             </div>
-                            <div class=" col-md-6 justify-content-center align-items-center">
-                                <div class="img2-container ">
-                                    <img src="./imgs/fotoperfil_jpg.jpg" alt="minhafoto" class="img-fluid d-flex justify-content-center align-items-center" style="width: 60%">
-                                </div>
-                            </div>
+                            <div class="col-12 col-md-6 mt-4 mt-md-0 text-center">
+
+  <div class="img2-container w-100">
+    <img src="./imgs/fotoperfil_jpg.jpg"
+         alt="minhafoto"
+         class="img-fluid d-block mx-auto"
+         style="width:60%;">
+  </div>
+
+</div>
                         </div>
                     </div>
                     <div class="container mb-5">
